[gd_scene load_steps=3 format=3 uid="uid://bq8leeh8a0cfd"]

[ext_resource type="Script" path="res://assets/scripts/DraggableSprite.gd" id="1_j034f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_db6jm"]

[node name="DraggableSprite" type="Node2D"]
script = ExtResource("1_j034f")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_db6jm")

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
